--- a/recent_reads.html
+++ b/recent_reads.html
@@ -6,14 +6,14 @@
     <link rel="icon" type="image/x-icon" href="images/favicontemp.png">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Mia's Recent Reads</title>
+    <title>Recent Reads</title>
 </head>
 <body>
     <div>
         <header>
             <a class = "skip" href="#main">Skip to Main Content</a>
             <nav class="navbar">
-                <a href="index.html" class="nav-branding">Mia's Books</a>
+                <a href="index.html" class="nav-branding">Mia's Bookshelf</a>
 
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -36,13 +36,13 @@
         <main id="main">
             <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
             <div>
-            <h1>Mia's Recent Reads</h1>
+            <h1>My Recent Reads</h1>
                 <div class="recent-intro">
                     <p>This page features all of my recently-read books. Each book has my rating out of 5 stars and a brief, spoiler-free summary. If you would like to get recommendations by genre, be sure to check out the Genre Recommendations page! </p>
                     <p>Stuff about recommentation page</p>
                 </div>
             <div>
-                <h2>Recent Reads</h2>
+                <h2>What Have I Been Reading?</h2>
                 <div class="recent-container">
                     <div class="book">
                         <h3>The Inadequate Heir</h3>
