--- a/recommendations.html
+++ b/recommendations.html
@@ -11,9 +11,9 @@
 <body>
     <div>
         <header>
-            <a class = "skip" href="#skip">Skip to Main Content</a>
+            <a class = "skip" href="#main">Skip to Main Content</a>
             <nav class="navbar">
-                <a href="index.html" class="nav-branding">Mia's Books</a>
+                <a href="index.html" class="nav-branding">Mia's Bookshelf</a>
 
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -38,10 +38,10 @@
             <div class="rec-container">
                 <h1>Recommendations</h1>
                 <div class="rec-intro">
-                    <p>Need some recommendations? Look no further. Here are some of my recommendations based on your favorite genre! I hope you find something you like!</p>
+                    <p>Need some not-so-typical recommendations? Look no further. Here are some of my recommendations based on oddly specific vibes! I hope you find something you like!</p>
                 </div>
                 <div class="directions">
-                    <p>Click on the buttons below to filter the recommendations by genre. If you would like to see all recommendations, click the "All" button. If you would like to see recommendations that do not fit into any of the genres listed, click the "None" button.</p>
+                    <p>Click on the buttons below to filter the recommendations by genre. If you would like to see all recommendations, click the "All" button.</p>
                 </div>
             </div>
             <h2>What are you feeling like?</h2>
@@ -49,9 +49,9 @@
                 <button type="button" class="control" data-filter="all">All</button>
                 <button type="button" class="control" data-filter=".fantasy">Dragons, & Jedi, & Elves, oh my!</button>
                 <button type="button" class="control" data-filter=".romance">Grandma Approved Romance</button>
-                <button type="button" class="control" data-filter=".notromance"> NOT Grandma Approved Romance</button>
+                <button type="button" class="control" data-filter=".notromance">Grandma Unapproved Romance</button>
                 <button type="button" class="control" data-filter=".ya">YA</button>
-                <button type="button" class="control" data-filter=".lgbt">LGBT</button>
+                <button type="button" class="control" data-filter=".lgbt">LGBTQ+</button>
                 <button type="button" class="control" data-filter=".cry">Crying at 3am</button>
                 <button type="button" class="control" data-filter=".dread">Existential Dread Page-turners</button>
             </div>
@@ -81,7 +81,7 @@
 
                 <figure class="mix fantasy notromance">
                     <img src="images/the_bridge_kingdom.jpg" alt="Book cover for The Bridge Kingdom by Danielle L. Jensen">
-                    <figcaption>The Bridge Kingdom</figcaption>
+                    <figcaption>The Bridge Kingdom by Danielle L. Jensen</figcaption>
 
                 </figure>
 
@@ -101,6 +101,11 @@
                     <img src="images/graceling.jpg" alt="Book cover for So This is Ever After by F.T. Lukens">
                     <figcaption>Graceling by Kristin Cashore</figcaption>
 
+                </figure>
+
+                <figure class="mix romance dread cry lgbt">
+                    <img src="images/they_both_die.jpg" alt="Book cover for They Both Die at the End by Adam Silvera">
+                    <figcaption>They Both Die at the End by Adam Silvera</figcaption>
                 </figure>
         </main>
         <script src="js/hamMenu.js"></script>
