--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="icon" type="image/x-icon" href="images/favicontemp.png">
     <link rel="stylesheet" href="css/html5reset.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Mia's Recent Reads</title>
+    <title>Mia's Bookshelf</title>
 </head>
 <body>
     <div>
         <header>
             <a class = "skip" href="#main">Skip to Main Content</a>
             <nav class="navbar">
-                <a href="index.html" class="nav-branding">Mia's Books</a>
+                <a href="index.html" class="nav-branding">Mia's Bookshelf</a>
 
                 <ul class="nav-menu">
                     <li class="nav-item">
@@ -37,7 +37,7 @@
             <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
             <h1> Welcome!</h1>
             <div class = "welcome">
-                <p> Welcome to my website! I am a book lover and I am excited to share my love of reading with you. This website features all of my recently-read books, as well as recommendations by genre. I hope you find something you like! </p>
+                <p> Welcome to my website! I am a book lover and I am excited to share my love of reading with you. This website features all of my recently-read books and what I thought of them- the good, the bad, and the dirty. If you're looking for recommendations, check up my "Recommendations" page where I recommend books by vibes. I hope you find something you like! </p>
             </div>
             <!-- <div class="home-links">
                 <a href="recent_reads.html" class="button">Recent Reads</a>
@@ -59,11 +59,11 @@
             </div>
             <div class="favorite-things">
                 <h3>Favorite Things To Do</h3>
-                <p>When I'm not reading, I love to do the following things:</p>
+                <p>While I love reading (duh), I like other things too. When I'm not reading, I love to do these things:</p>
                     <ul>
                         <li>Play video games</li>
                         <li>Hike</li>
-                        <li>Cross stitch </li>
+                        <li>Sew</li>
                     </ul>
             </div>
         </main>
