--- a/recent_reads.html
+++ b/recent_reads.html
@@ -66,7 +66,7 @@
                         <img src="images/the_hobbit.jpg" alt="Book cover for 'The Hobbit'">
                         <p>Rating: 4/5</p>
                         <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
+                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about. Blah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blah</p>
                     </div>
                     <div class="book">
                         <h3>The Song of Achilles</h3>
