--- a/recommendations.html
+++ b/recommendations.html
@@ -44,7 +44,7 @@
                     <p>Click on the buttons below to filter the recommendations by genre. If you would like to see all recommendations, click the "All" button.</p>
                 </div>
             </div>
-            <h2>What are you feeling like?</h2>
+            <h2>What's The Vibe?</h2>
             <div class="controls">
                 <button type="button" class="control" data-filter="all">All</button>
                 <button type="button" class="control" data-filter=".fantasy">Dragons, & Jedi, & Elves, oh my!</button>
