--- a/index.html
+++ b/index.html
@@ -45,9 +45,14 @@
             </div> -->
             <div class="about-me">
                 <h2>About Me!</h2>
-                <p>My name is Mia and I am a grad student at the University of Michigan School of Information. I received my BA in Anthropology from Alma College in 2023. I am a bookworm and love to read whenever I can (which isn't often as a grad student).</p>
-                <img src="images/about_me_1.JPG" alt="A picture of Mia">
+                <p>My name is Mia and I am a grad student at the University of Michigan School of Information studying UX research and design. Before attending U of M, I received my BA in Anthropology from Alma College in 2023. I am a bookworm and love to read whenever I can (which isn't often as a grad student). If I am not reading, you can usually find me sewing, playing Stardew Valley, or napping.</p>
             </div>
+
+            <div class="about-me-img">
+                <img src="images/about_me_1.JPG" alt="A picture of Mia">
+                <img src="images/about_me_2.JPG" alt="A picture of Mia">
+            </div>
+
             <div class="favorite-books">
                 <h3>All Time Favorite Books</h3>
                 <p>These are some of my all-time favorite books. I highly recommend them to anyone who loves to read!</p>
