--- a/recent_reads.html
+++ b/recent_reads.html
@@ -66,7 +66,7 @@
                         <img src="images/the_hobbit.jpg" alt="Book cover for 'The Hobbit'">
                         <p>Rating: 4/5</p>
                         <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about. Blah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blahBlah blah blah blah blah blah</p>
+                        <p>Summary: "The Hobbit," written by J.R.R. Tolkien, is a fantasy novel that follows the journey of Bilbo Baggins, a Hobbit who enjoys a comfortable and unadventurous life in his home in the Shire. Bilbo's world is turned upside down when he is unexpectedly recruited by the wizard Gandalf to join a group of Dwarves on an epic quest. Their mission is to reclaim the Dwarves' homeland, the Lonely Mountain, from the dragon Smaug, who has taken over the mountain and hoards a vast treasure.</p>
                     </div>
                     <div class="book">
                         <h3>The Song of Achilles</h3>
