--- a/recommendations.html
+++ b/recommendations.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="container gallery">
-                <figure class="mix fantasy romance cry">
+                <figure class="mix fantasy romance cry ya">
                     <img src="images/lost_stars.jpg" alt="Book cover of Lost Stars by Claudia Gray">
                     <figcaption>Lost Stars by Claudia Gray</figcaption>
                 </figure>
@@ -91,7 +91,7 @@
 
                 </figure>
 
-                <figure class="mix fantasy lgbt romance">
+                <figure class="mix fantasy lgbt romance ya">
                     <img src="images/so_this_is_ever_after.jpg" alt="Book cover for So This is Ever After by F.T. Lukens">
                     <figcaption>So This is Ever After by F.T. Lukens</figcaption>
 
@@ -106,6 +106,25 @@
                 <figure class="mix romance dread cry lgbt">
                     <img src="images/they_both_die.jpg" alt="Book cover for They Both Die at the End by Adam Silvera">
                     <figcaption>They Both Die at the End by Adam Silvera</figcaption>
+                </figure>
+
+                <figure class="mix notromance">
+                    <img src="images/the_unhoneymooners.jpg" alt="Book cover for The Unhoneymooners by Christina Lauren">
+                    <figcaption>The Unhoneymooners by Christina Lauren</figcaption>
+                </figure>
+
+                <figure class="mix lgbt fantasy ya">
+                    <img src="images/six_of_crows.jpg" alt="Book cover for Six of Crows by Leigh Bardugo">
+                    <figcaption>Six of Crows by Leigh Bardugo</figcaption>
+                </figure>
+
+                <figure class="mix fantasy ya">
+                    <img src="images/shadow_and_bone.jpg" alt="Book cover for Shadow and Bone by Leigh Bardugo">                <figcaption>Shadow and Bone by Leigh Bardugo</figcaption>
+                </figure>
+
+                <figure class="mix dread">
+                    <img src="images/going_after_cacciato.jpg" alt="Book cover for Going After Cacciato by Tim O'Brien">
+                    <figcaption>Going After Cacciato by Tim O'Brien</figcaption>
                 </figure>
         </main>
         <script src="js/hamMenu.js"></script>
