--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div>
         <header>
-            <a class = "skip" href="#main">Skip to Main Content</a>
+            <a class="skip" href="#main">Skip to Main Content</a>
             <nav class="navbar">
                 <a href="index.html" class="nav-branding">Mia's Bookshelf</a>
 
@@ -35,14 +35,10 @@
         </header>
         <main class="container" id="main">
             <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
-            <h1> Welcome!</h1>
-            <div class = "welcome">
-                <p> Welcome to my website! I am a book lover and I am excited to share my love of reading with you. This website features all of my recently-read books and what I thought of them- the good, the bad, and the dirty. If you're looking for recommendations, check up my "Recommendations" page where I recommend books by vibes. I hope you find something you like! </p>
+            <h1>Welcome!</h1>
+            <div class="welcome">
+                <p>Welcome to my website! I am a book lover and I am excited to share my love of reading with you. This website features all of my recently-read books and what I thought of them- the good, the bad, and the dirty. If you're looking for recommendations, check out my "Recommendations" page where I recommend books by vibes. I hope you find something you like!</p>
             </div>
-            <!-- <div class="home-links">
-                <a href="recent_reads.html" class="button">Recent Reads</a>
-                <a href="recommendations.html" class="button">Recommendations</a>
-            </div> -->
             <div class="about-me">
                 <h2>About Me!</h2>
                 <p>My name is Mia and I am a grad student at the University of Michigan School of Information studying UX research and design. Before attending U of M, I received my BA in Anthropology from Alma College in 2023. I am a bookworm and love to read whenever I can (which isn't often as a grad student). If I am not reading, you can usually find me sewing, playing Stardew Valley, or napping.</p>
@@ -56,22 +52,24 @@
             <div class="favorite-books">
                 <h3>All Time Favorite Books</h3>
                 <p>These are some of my all-time favorite books. I highly recommend them to anyone who loves to read!</p>
-                    <ul>
-                        <li>The Song of Achilles</li>
-                        <li>Convergence</li>
-                        <li>Six of Crows</li>
-                    </ul>
+                <ul>
+                    <li>The Song of Achilles</li>
+                    <li>Convergence</li>
+                    <li>Six of Crows</li>
+                </ul>
             </div>
             <div class="favorite-things">
                 <h3>Favorite Things To Do</h3>
                 <p>While I love reading (duh), I like other things too. When I'm not reading, I love to do these things:</p>
-                    <ul>
-                        <li>Play video games</li>
-                        <li>Hike</li>
-                        <li>Sew</li>
-                    </ul>
+                <ul>
+                    <li>Play video games</li>
+                    <li>Hike</li>
+                    <li>Sew</li>
+                </ul>
             </div>
         </main>
+    </div> <!-- Closing div that was opened before the header -->
     <script src="js/hamMenu.js"></script>
     <script src="js/backTop.js"></script>
 </body>
+</html>
