--- a/recent_reads.html
+++ b/recent_reads.html
@@ -9,40 +9,37 @@
     <title>Recent Reads</title>
 </head>
 <body>
-    <div>
-        <header>
-            <a class = "skip" href="#main">Skip to Main Content</a>
-            <nav class="navbar">
-                <a href="index.html" class="nav-branding">Mia's Bookshelf</a>
+    <header>
+        <a class="skip" href="#main">Skip to Main Content</a>
+        <nav class="navbar">
+            <a href="index.html" class="nav-branding">Mia's Bookshelf</a>
 
-                <ul class="nav-menu">
-                    <li class="nav-item">
-                        <a href="index.html" class="nav-link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="recent_reads.html" class="nav-link active">Recent Reads</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="recommendations.html" class="nav-link">Recommendations</a>
-                    </li>
-                </ul>
-                <div class="hamburger">
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                </div>
-            </nav>
-        </header>
-        <main id="main">
-            <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
-            <div>
-            <h1>My Recent Reads</h1>
-                <div class="recent-intro">
-                    <p>This page features all of my recently-read books. Each book has my rating out of 5 stars and a brief, spoiler-free summary. If you would like to get recommendations by genre, be sure to check out the Genre Recommendations page! </p>
-                    <p>Stuff about recommentation page</p>
-                </div>
-            <div>
-                <h2>What Have I Been Reading?</h2>
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="index.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a href="recent_reads.html" class="nav-link active">Recent Reads</a>
+                </li>
+                <li class="nav-item">
+                    <a href="recommendations.html" class="nav-link">Recommendations</a>
+                </li>
+            </ul>
+            <div class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </div>
+        </nav>
+    </header>
+    <main id="main">
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
+        <h1>My Recent Reads</h1>
+        <div class="recent-intro">
+            <p>This page features all of my recently-read books. Each book has my rating out of 5 stars and a brief, spoiler-free summary. If you would like to get recommendations by genre, be sure to check out the Genre Recommendations page!</p>
+            <p>Stuff about recommendation page</p>
+        </div>
+        <h2>What Have I Been Reading?</h2>
                 <div class="recent-container">
                     <div class="book">
                         <h3>The Inadequate Heir</h3>
@@ -93,10 +90,8 @@
                         <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
                     </div>
                 </div>
-            </div>
         </main>
-    </div>
-    <script src="js/hamMenu.js"></script>
-    <script src="js/backTop.js"></script>
-</body>
-</html>
+        <script src="js/hamMenu.js"></script>
+        <script src="js/backTop.js"></script>
+    </body>
+    </html>
