--- a/recent_reads.html
+++ b/recent_reads.html
@@ -44,53 +44,53 @@
         </div>
         <h2>What Have I Been Reading?</h2>
                 <div class="recent-container">
-                    <div class="book">
+                    <div class="book" tabindex="0">
                         <h3>The Inadequate Heir</h3>
                         <h4>by Danielle L. Jensen</h4>
                         <img src="images/the_inadequate_heir.jpg" alt="Book cover for 'The Inadequate Heir'">
                         <p>Rating: 5/5</p>
-                        <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
+                        <p>Tags: Fantasy, Romance, Adventure</p>
+                        <p>Summary: A soldier raised as heir to an empire, Zarrah is motivated by two truths. The first is that the Veliant family murdered her mother. And the second is that her pursuit of vengeance will put every last one of them in their graves. The Endless War between Maridrina and Valcotta has raged for generations, leaving thousands of Zarrah’s people dead and countless more orphaned. So when she’s given command of the contested city of Nerastis, Zarrah is prepared to do whatever it takes to destroy the Maridrinian forces who oppose her. And to kill the Veliant prince who leads them. Yet a chance encounter with an anonymous, and handsome, Maridrinian causes Zarrah to question whether the violence she’s perpetrated is justice or a crime. And as she continues to meet the nameless man each night, she finds common ground - and fiery passion - in his arms. But when identities are revealed, Zarrah must decide whether to embrace a chance at peace…or march to the drums of war.</p>
                     </div>
-                    <div class="book">
+                    <div class="book" tabindex="0">
                         <h3>The Lightning Thief</h3>
                         <h4>by Rick Riordan</h4>
                         <img src="images/lightning_thief.jpeg" alt="Book cover for 'The Lightning Thief'">
                         <p>Rating: 4/5</p>
-                        <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
+                        <p>Tags: Mythology, Urban Fantasy, YA</p>
+                        <p>Summary: Percy Jackson is a good kid, but he can't seem to focus on his schoolwork or control his temper. And lately, being away at boarding school is only getting worse - Percy could have sworn his pre-algebra teacher turned into a monster and tried to kill him. When Percy's mom finds out, she knows it's time that he knew the truth about where he came from, and that he go to the one place he'll be safe. She sends Percy to Camp Half Blood, a summer camp for demigods (on Long Island), where he learns that the father he never knew is Poseidon, God of the Sea. Soon a mystery unfolds and together with his friends—one a satyr and the other the demigod daughter of Athena - Percy sets out on a quest across the United States to reach the gates of the Underworld (located in a recording studio in Hollywood) and prevent a catastrophic war between the gods.</p>
                     </div>
-                    <div class="book">
+                    <div class="book" tabindex="0">
                         <h3>The Hobbit</h3>
                         <h4>by J.R.R. Tolkien</h4>
                         <img src="images/the_hobbit.jpg" alt="Book cover for 'The Hobbit'">
                         <p>Rating: 4/5</p>
-                        <p>Tags: etc etc etc</p>
-                        <p>Summary: "The Hobbit," written by J.R.R. Tolkien, is a fantasy novel that follows the journey of Bilbo Baggins, a Hobbit who enjoys a comfortable and unadventurous life in his home in the Shire. Bilbo's world is turned upside down when he is unexpectedly recruited by the wizard Gandalf to join a group of Dwarves on an epic quest. Their mission is to reclaim the Dwarves' homeland, the Lonely Mountain, from the dragon Smaug, who has taken over the mountain and hoards a vast treasure.</p>
+                        <p>Tags: Adventure, Fantasy, Classic</p>
+                        <p>Summary: Bilbo Baggins is a hobbit who enjoys a comfortable, unambitious life, rarely traveling any farther than his pantry or cellar. But his contentment is disturbed when the wizard Gandalf and a company of dwarves arrive on his doorstep one day to whisk him away on an adventure. They have launched a plot to raid the treasure hoard guarded by Smaug the Magnificent, a large and very dangerous dragon. Bilbo reluctantly joins their quest, unaware that on his journey to the Lonely Mountain he will encounter both a magic ring and a frightening creature known as Gollum.</p>
                     </div>
-                    <div class="book">
+                    <div class="book" tabindex="0">
                         <h3>The Song of Achilles</h3>
                         <h4>by Madeline Miller</h4>
                         <img src="images/song_of_achilles.jpg" alt="Book cover for 'The Song of Achilles'">
                         <p>Rating: 5/5</p>
-                        <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
+                        <p>Tags: Mythology, LGBTQ+, Tragedy</p>
+                        <p>Greece in the age of heroes. Patroclus, an awkward young prince, has been exiled to the court of King Peleus and his perfect son Achilles. By all rights their paths should never cross, but Achilles takes the shamed prince as his friend, and as they grow into young men skilled in the arts of war and medicine their bond blossoms into something deeper - despite the displeasure of Achilles' mother Thetis, a cruel sea goddess. But then word comes that Helen of Sparta has been kidnapped. Torn between love and fear for his friend, Patroclus journeys with Achilles to Troy, little knowing that the years that follow will test everything they hold dear. Profoundly moving and breathtakingly original, this rendering of the epic Trojan War is a dazzling feat of the imagination, a devastating love story, and an almighty battle between gods and kings, peace and glory, immortal fame and the human heart.</p>
                     </div>
-                    <div class="book">
+                    <div class="book" tabindex="0">
                         <h3>Good Omens</h3>
                         <h4>by Neil Gaiman and Terry Pratchett</h4>
                         <img src="images/good_omens.jpg" alt="Book cover for 'Good Omens'">
                         <p>Rating: 4/5</p>
-                        <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
+                        <p>Tags: Urban Fantasy, Comedy</p>
+                        <p>Summary: According to The Nice and Accurate Prophecies of Agnes Nutter, Witch (the world's only completely accurate book of prophecies, written in 1655, before she exploded), the world will end on a Saturday. Next Saturday, in fact. Just before dinner. So the armies of Good and Evil are amassing, Atlantis is rising, frogs are falling, tempers are flaring. Everything appears to be going according to Divine Plan. Except a somewhat fussy angel and a fast-living demon—both of whom have lived amongst Earth's mortals since The Beginning and have grown rather fond of the lifestyle—are not actually looking forward to the coming Rapture. And someone seems to have misplaced the Antichrist . . .</p>
                     </div>
-                    <div class="book">
+                    <div class="book" tabindex="0">
                         <h3>So This Is Ever After</h3>
                         <h4>by F.T. Lukens</h4>
                         <img src="images/so_this_is_ever_after.jpg" alt="Book cover for 'So This Is Ever After'">
-                        <p>Rating: 5/5</p>
-                        <p>Tags: etc etc etc</p>
-                        <p>Summary: This is a brief summary of the book. It is spoiler-free and gives a general idea of what the book is about.</p>
+                        <p>Rating: 3/5</p>
+                        <p>Tags: Romance, LGBTQ+, YA</p>
+                        <p>Summary: Arek hadn’t thought much about what would happen after he completed the prophecy that said he was destined to save the Kingdom of Ere from its evil ruler. So now that he’s finally managed to (somewhat clumsily) behead the evil king (turns out magical swords yanked from bogs don’t come pre-sharpened), he and his rag-tag group of quest companions are at a bit of a loss for what to do next. As a temporary safeguard, Arek’s best friend and mage, Matt, convinces him to assume the throne until the true heir can be rescued from her tower. Except that she’s dead. Now Arek is stuck as king, a role that comes with a magical catch: choose a spouse by your eighteenth birthday, or wither away into nothing. With his eighteenth birthday only three months away, and only Matt in on the secret, Arek embarks on a desperate bid to find a spouse to save his life—starting with his quest companions. But his attempts at wooing his friends go painfully and hilariously wrong…until he discovers that love might have been in front of him all along.</p>
                     </div>
                 </div>
         </main>
