--- a/recommendations.html
+++ b/recommendations.html
@@ -45,17 +45,24 @@
                 <div class="directions">
                     <p>Click on the buttons below to filter the recommendations by genre. If you would like to see all recommendations, click the "All" button.</p>
                 </div>
+                <!-- <div class="myList">
+                    <textarea name="message" ></textarea>
+                    <button type="button">Copy</button>
+                    <button type="button">Clear</button>
+                </div> -->
             </div>
+
             <h2>What's The Vibe?</h2>
             <div class="controls">
                 <button type="button" class="control" data-filter="all">All</button>
+                <button type="button" class="control" data-filter=".ya">YA</button>
+                <button type="button" class="control" data-filter=".lgbt">LGBTQ+</button>
                 <button type="button" class="control" data-filter=".fantasy">Dragons, & Jedi, & Elves, oh my!</button>
                 <button type="button" class="control" data-filter=".romance">Grandma Approved Romance</button>
                 <button type="button" class="control" data-filter=".notromance">Grandma Unapproved Romance</button>
-                <button type="button" class="control" data-filter=".ya">YA</button>
-                <button type="button" class="control" data-filter=".lgbt">LGBTQ+</button>
                 <button type="button" class="control" data-filter=".cry">Crying at 3am</button>
                 <button type="button" class="control" data-filter=".dread">Existential Dread Page-turners</button>
+                <button type="button" class="control" data-filter=".what">Wait...what??</button>
             </div>
 
             <div class="container gallery">
@@ -64,7 +71,7 @@
                     <figcaption>Lost Stars by Claudia Gray</figcaption>
                 </figure>
 
-                <figure class="mix fantasy">
+                <figure class="mix fantasy what">
                     <img src="images/good_omens.jpg" alt="Book cover of Good Omens by Terry Pratchett and Niel Gaiman">
                     <figcaption>Good Omens by Terry Pratchett and Niel Gaiman</figcaption>
                 </figure>
@@ -105,7 +112,7 @@
 
                 </figure>
 
-                <figure class="mix romance dread cry lgbt">
+                <figure class="mix romance dread cry lgbt what">
                     <img src="images/they_both_die.jpg" alt="Book cover for They Both Die at the End by Adam Silvera">
                     <figcaption>They Both Die at the End by Adam Silvera</figcaption>
                 </figure>
@@ -121,10 +128,11 @@
                 </figure>
 
                 <figure class="mix fantasy ya">
-                    <img src="images/shadow_and_bone.jpg" alt="Book cover for Shadow and Bone by Leigh Bardugo">                <figcaption>Shadow and Bone by Leigh Bardugo</figcaption>
+                    <img src="images/shadow_and_bone.jpg" alt="Book cover for Shadow and Bone by Leigh Bardugo">
+                    <figcaption>Shadow and Bone by Leigh Bardugo</figcaption>
                 </figure>
 
-                <figure class="mix dread">
+                <figure class="mix dread what">
                     <img src="images/going_after_cacciato.jpg" alt="Book cover for Going After Cacciato by Tim O'Brien">
                     <figcaption>Going After Cacciato by Tim O'Brien</figcaption>
                 </figure>
