--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="about-me-img">
-                <img src="images/about_me_1.JPG" alt="A selfie of a girl with medium long brown hair, smiling.">
+                <!-- <img src="images/about_me_1.JPG" alt="A selfie of a girl with medium long brown hair, smiling."> -->
                 <img src="images/about_me_2.JPG" alt="A girl laying down on a hammock and reading a book.">
             </div>
 
