--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <button onclick="topFunction()" id="myBtn" title="Go to top">Back to top</button>
             <h1>Welcome!</h1>
             <div class="welcome">
-                <p>Welcome to my website! I am a book lover and I am excited to share my love of reading with you. This website features all of my recently-read books and what I thought of them- the good, the bad, and the dirty. If you're looking for recommendations, check out my "Recommendations" page where I recommend books by vibes. I hope you find something you like!</p>
+                <p>Welcome to my website! I am a book lover and I am excited to share my love of reading with you. This website features all of my recently-read books and my ratings along with a spoiler-free summary of the book. If you're looking for recommendations, check out my "Recommendations" page where I recommend books by vibes. I hope you find something you like!</p>
             </div>
             <div class="about-me">
                 <h2>About Me!</h2>
