--- a/recent_reads.html
+++ b/recent_reads.html
@@ -40,7 +40,7 @@
         <h1>My Recent Reads</h1>
         <div class="recent-intro">
             <p>This page features all of my recently-read books. Each book has my rating out of 5 stars and a brief, spoiler-free summary. If you would like to get recommendations by genre, be sure to check out the Genre Recommendations page!</p>
-            <p>Stuff about recommendation page</p>
+            <p>Looking for book recommendations? Be sure to check out the Recommendations page to see some of my favorite books by category!</p>
         </div>
         <h2>What Have I Been Reading?</h2>
                 <div class="recent-container">
