--- a/recommendations.html
+++ b/recommendations.html
@@ -43,13 +43,8 @@
                     <p>Need some not-so-typical recommendations? Look no further. Here are some of my recommendations based on oddly specific vibes! I hope you find something you like!</p>
                 </div>
                 <div class="directions">
-                    <p>Click on the buttons below to filter the recommendations by genre. If you would like to see all recommendations, click the "All" button.</p>
+                    <p>Click on the buttons below to filter the recommendations by vibes. If you would like to see all recommendations, click the "All" button.</p>
                 </div>
-                <!-- <div class="myList">
-                    <textarea name="message" ></textarea>
-                    <button type="button">Copy</button>
-                    <button type="button">Clear</button>
-                </div> -->
             </div>
 
             <h2>What's The Vibe?</h2>
